--- a/resources/css/scss/_layout.scss
+++ b/resources/css/scss/_layout.scss
@@ -57,9 +57,10 @@
 	.logo {
 		display: inline-block;
 		@include hide-text;
-		background: #fff;
+		// background: #fff;
 		width: 124px;
 		height: 18px;
+		background: url('/resources/images/gms_ci_ko@3x.png') no-repeat center /contain;
 		&-info {
 			@include font-size-md;
 			color: $white;
