--- a/resources/css/scss/modules/_select.scss
+++ b/resources/css/scss/modules/_select.scss
@@ -12,8 +12,8 @@
 // 	padding: 0 10px;
 // 	border:  1px solid $inputDefault;
 // 	background-color: #fff;
-// 	background-image: url('./../images/icon/xs-15/icon_arrow_down@3x.png');
-// 	background-image: url('./../images/icon/xs-15/icon_arrow_down.svg');
+// 	background-image: url('/resources/images/icon/xs-15/icon_arrow_down@3x.png');
+// 	background-image: url('/resources/images/icon/xs-15/icon_arrow_down.svg');
 // 	background-repeat: no-repeat;
 // 	background-position: calc(100% - 10px) 50%;
 // 	background-size: 15px 15px;
@@ -31,7 +31,7 @@
 // 	}
 // 	&.focus {
 // 		border:  1px solid #24a9e8;
-// 		background-image: url('./../images/select-active.png');
+// 		background-image: url('/resources/images/select-active.png');
 // 	}
 // }
 // .select {
