--- a/pages/layout/doctype.html
+++ b/pages/layout/doctype.html
@@ -6,5 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Document</title>
     <!-- Load Styles -->
+    <!-- <link rel="stylesheet" href="/resources/lib/kendo/styles/kendo.common.min.css"> -->
     <link rel="stylesheet" href="/resources/css/index.css">
 </head>
