--- a/resources/css/scss/_variables.scss
+++ b/resources/css/scss/_variables.scss
@@ -8,7 +8,7 @@
 //************************************************************
 // @charset "utf-8";
 
-$fontFamily: "Noto Sans KR", "Roboto", HelveticaNeue-Light, AppleSDGothicNeo-Light, "Malgun Gothic", "맑은 고딕", sans-serif;
+$fontFamily: "Noto Sans KR", "Roboto", sans-serif;
 /*
 * Regular font size
 */
