--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -145,11 +145,7 @@ template { display: none; }
 /* Example of useage: @include background-opacity(#000, 0.3); */
 * { -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-html, body { font-family: "Noto Sans KR", "Roboto", sans-serif; padding: 0; margin: 0; width: 100%; height: 100%; overflow: hidden; }
-
-html { height: 100%; }
-
-body { min-height: 100%; background-color: #f5f5f5; }
+html, body { font-family: "Noto Sans KR", "Roboto", sans-serif; padding: 0; margin: 0; width: 100%; height: 100%; background-color: #f5f5f5; }
 
 ul, li, ol { padding: 0; margin: 0; }
 
