--- a/resources/css/scss/_global.scss
+++ b/resources/css/scss/_global.scss
@@ -20,15 +20,7 @@ body {
 	margin: 0;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
-}
-
-html {
-	height: 100%;
-}
-
-body {
-	min-height: 100%;
+	// overflow: hidden;
 	background-color: $bg;
 }
 ul,
